<resources>
    <string name="app_name">SOLICITUD COMODINES</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="SOLICITUD">SOLICITUD</string>
    <string name="CANCELAR">CANCELAR</string>
    <string name="CLIENTES">CLIENTES</string>
    <string name="GESTOR">GESTOR</string>
    <string name="ACTUALIZAR">ACTUALIZAR</string>
    <string name="AYUDA">AYUDA</string>
    <string name="ENTRADA">H.ENTRADA</string>
    <string name="SALIDA">H.SALIDA</string>
    <string name="COMODIN">COMODINES</string>
    <string name="ELIGIR">ELIJA GESTOR</string>
    <string name="hora">00:00</string>
    <string name="FECHA">FECHA</string>
    <string name="falta_comodin">Atencion: Falta el nombre del Comodin</string>
    <string name="falta_cliente">Atencion: Falta el Cliente</string>
    <string name="OBSERVACIONES">OBSERVACIONES</string>
</resources>