<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.solicitudcomodines.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/GESTOR"
        app:showAsAction="never" />
    <item
        android:id="@+id/COMODIN"
        android:orderInCategory="101"
        android:title="@string/COMODIN" />
    <item
        android:id="@+id/CLIENTES"
        android:orderInCategory="102"
        android:title="@string/CLIENTES" />
    <item
        android:id="@+id/ACTUALIZAR"
        android:orderInCategory="103"
        android:title="@string/ACTUALIZAR" />
    <item
        android:id="@+id/AYUDA"
        android:enabled="false"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="104"
        android:title="@string/AYUDA" />
</menu>